--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h1>
-  {{title}}
-</h1>
+<app-nav-bar></app-nav-bar>
+
+<div class="app-container">
+  <md-card *ngIf="!authService.authenticated()">
+     <md-card-title>Hey WhatsUp!</md-card-title>
+       <md-card-subtitle>
+          Please <a href="#" (click)="authService.signIn()"> sign in</a>
+          to manage your task list
+       </md-card-subtitle>
+  </md-card>
+
+  <app-task-list *ngIf='authService.authenticated()'
+   (startAjaxRequest)="slimLoading.start()"
+    (completeAjaxRequest)="slimLoading.complete()">
+  </app-task-list>
+
+  <ng2-slim-loading-bar
+     [color]="'gold'"
+     [height]="'4px'"
+  ></ng2-slim-loading-bar>
+</div>
