--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,4 +1,4 @@
-<md-card>
+<!-- <md-card>
   <md-card-title>Task List</md-card-title>
   <md-card-subtitle>These are your current tasks</md-card-subtitle>
 
@@ -11,9 +11,100 @@
        <button class="delete" md-button md-raised-button
          color="accent" (click)="deleteTask(task)"
        > Delete</button>
+
     </div>
     <div class="task-item" *ngIf="tasks?.length == 0">
        <p>Good! There are no pending tasks</p>
     </div>
+
   </md-list>
-</md-card>
+</md-card> -->
+<!-- <div class="task-list-component">
+   <md-toolbar color="primary">
+    <span><md-icon>assignment</md-icon></span>
+
+     <span class="spacer"></span>
+
+     <button md-icon-button>
+        <md-icon>more_vert</md-icon>
+     </button>
+   </md-toolbar>
+   <md-list>
+   </md-list>
+</div> -->
+
+<div class="container"
+     fxLayout
+     fxLayout.xs="column"
+     fxLayoutAlign="center"
+     fxLayoutGap="20px"
+     fxLayoutGap.xs="0" layout="column">
+
+     <div class="row"
+       fxLayoutGap="20px"
+       fxFlex="80">
+
+         <div fxFlex="70" color="primary" class="task-list-header">
+           <md-icon class="task-list-header-icon" >assignment</md-icon>
+         </div>
+
+         <md-card fxFlex="70" fxFlexOffset="10" >
+           <app-task-form (taskAdded)="taskAddedHandler($event)" ></app-task-form>
+         </md-card>
+
+         <md-card class="task-list-body" fxFlex="70">
+           <md-list>
+             <div *ngFor="let task of tasks; trackBy: $index;"
+              fxFlexAlign="center"
+              fxLayout="row"
+              >
+
+               <div class="task-content" fxFlex="90" >
+                  <h3 class="task-description">{{ task.description }}</h3>
+                  <h5 class="task-sub">
+                    <md-icon class="task-created-icon" fxFlex="20" >access_time</md-icon>
+                    {{ task.createdAt | date: 'short' }}
+                  </h5>
+               </div>
+
+               <button class="task-button-check"  md-mini-fab color="Green" (click)="deleteTask(task)" >
+                  <md-icon>check</md-icon>
+               </button>
+             </div>
+           </md-list>
+
+
+         </md-card>
+       <div fxFlex></div>
+     </div>
+
+</div>
+
+
+<!-- <div role="tabpanel"
+  id="tab1-content" md-swipe-right="previous()" layout="row" layout-align="center center">
+                  <md-card flex-gt-sm="90" flex-gt-md="80" class="md-default-theme">
+                    <md-card-content>
+                      <h2>Activity</h2>
+                      <md-list role="list">
+                        <md-list-item role="listitem">
+
+                              <div class="md-tile-left inset" hide-sm="">
+                                  <svg class="user-avatar" viewBox="0 0 128 128" height="64" width="64" pointer-events="none" display="block"> <path fill="#FF8A80" d="M0 0h128v128H0z"></path> <path fill="#FFE0B2" d="M36.3 94.8c6.4 7.3 16.2 12.1 27.3 12.4 10.7-.3 20.3-4.7 26.7-11.6l.2.1c-17-13.3-12.9-23.4-8.5-28.6 1.3-1.2 2.8-2.5 4.4-3.9l13.1-11c1.5-1.2 2.6-3 2.9-5.1.6-4.4-2.5-8.4-6.9-9.1-1.5-.2-3 0-4.3.6-.3-1.3-.4-2.7-1.6-3.5-1.4-.9-2.8-1.7-4.2-2.5-7.1-3.9-14.9-6.6-23-7.9-5.4-.9-11-1.2-16.1.7-3.3 1.2-6.1 3.2-8.7 5.6-1.3 1.2-2.5 2.4-3.7 3.7l-1.8 1.9c-.3.3-.5.6-.8.8-.1.1-.2 0-.4.2.1.2.1.5.1.6-1-.3-2.1-.4-3.2-.2-4.4.6-7.5 4.7-6.9 9.1.3 2.1 1.3 3.8 2.8 5.1l11 9.3c1.8 1.5 3.3 3.8 4.6 5.7 1.5 2.3 2.8 4.9 3.5 7.6 1.7 6.8-.8 13.4-5.4 18.4-.5.6-1.1 1-1.4 1.7-.2.6-.4 1.3-.6 2-.4 1.5-.5 3.1-.3 4.6.4 3.1 1.8 6.1 4.1 8.2 3.3 3 8 4 12.4 4.5 5.2.6 10.5.7 15.7.2 4.5-.4 9.1-1.2 13-3.4 5.6-3.1 9.6-8.9 10.5-15.2M76.4 46c.9 0 1.6.7 1.6 1.6 0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6-.1-.9.7-1.6 1.6-1.6zm-25.7 0c.9 0 1.6.7 1.6 1.6 0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6-.1-.9.7-1.6 1.6-1.6z"></path> <path fill="#E0F7FA" d="M105.3 106.1c-.9-1.3-1.3-1.9-1.3-1.9l-.2-.3c-.6-.9-1.2-1.7-1.9-2.4-3.2-3.5-7.3-5.4-11.4-5.7 0 0 .1 0 .1.1l-.2-.1c-6.4 6.9-16 11.3-26.7 11.6-11.2-.3-21.1-5.1-27.5-12.6-.1.2-.2.4-.2.5-3.1.9-6 2.7-8.4 5.4l-.2.2s-.5.6-1.5 1.7c-.9 1.1-2.2 2.6-3.7 4.5-3.1 3.9-7.2 9.5-11.7 16.6-.9 1.4-1.7 2.8-2.6 4.3h109.6c-3.4-7.1-6.5-12.8-8.9-16.9-1.5-2.2-2.6-3.8-3.3-5z"></path> <circle fill="#444" cx="76.3" cy="47.5" r="2"></circle> <circle fill="#444" cx="50.7" cy="47.6" r="2"></circle> <path fill="#444" d="M48.1 27.4c4.5 5.9 15.5 12.1 42.4 8.4-2.2-6.9-6.8-12.6-12.6-16.4C95.1 20.9 92 10 92 10c-1.4 5.5-11.1 4.4-11.1 4.4H62.1c-1.7-.1-3.4 0-5.2.3-12.8 1.8-22.6 11.1-25.7 22.9 10.6-1.9 15.3-7.6 16.9-10.2z"></path> </svg>
+                              </div>
+                              <div class="md-tile-content">
+                                <h3 class="ng-binding">Brunch this weekend?</h3>
+                                <h4 class="ng-binding">Ali Conners</h4>
+                                <p class="ng-binding">
+                                   I'll be in your neighborhood doing errands
+                                </p>
+                              </div>
+
+                            <md-divider md-inset="" hide-sm="" class="ng-scope md-default-theme"></md-divider>
+
+                        </md-list-item>
+
+                      </md-list>
+                    </md-card-content>
+                  </md-card>
+              </div> -->
