--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -1,10 +1,44 @@
-.task-item {
-  paddin: 10px;
-  margin-bott: 10px;
-  background-color: #eee;
+body {
+  background-image: -webkit-linear-gradient(top, #f2f2f2, #e6e6e6);
 }
 
-button.delete {
-  float: right;
-  top: -60px;
+.spacer {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+}
+
+.task-list-header {
+  background-color: #3949ab;
+  padding: 30px;
+}
+
+.task-list-header-icon {
+  color: white;
+  font-size: 35px;
+}
+
+.task-sub, .task-description {
+  font-weight: 400;
+  font-size: 1.1em;
+  color: rgba(70, 65, 65, 0.87);
+}
+
+.task-content {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  padding: 1px;
+  text-overflow: ellipsis;
+}
+.task-description {
+    margin: 0 0 3px;
+}
+
+.task-sub {
+  font-size: 0.8em;
+}
+
+.task-created-icon {
+  font-size: 13px;
 }
