--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import "~@angular/material/core/theming/prebuilt/indigo-pink.css";
 @import "~ng2-slim-loading-bar/bundles/style.css";
-
+@import '~https://fonts.googleapis.com/icon?family=Material+Icons';
 body {
   margin: 0;
 }
